fix performance on small screen

--- a/src/components/customers/customer-showcase.css
+++ b/src/components/customers/customer-showcase.css
@@ -27,7 +27,8 @@
 .three-d-hover-gallery__item {
   transform-style: preserve-3d;
   backface-visibility: hidden;
-  will-change: transform, filter, opacity;
+  will-change: transform, width, filter;
+  contain: layout style paint;
   outline: none;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
